objects/infy_dm__Data_Dictionary__c.object
<CustomObject>
    <fields>
        <fullName>infy_dm__Currency__c</fullName>
        <label>CURRENCY</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>infy_dm__DATE__c</fullName>
        <label>DATE</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>infy_dm__DOUBLE__c</fullName>
        <label>DOUBLE</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infy_dm__Email__c</fullName>
        <label>EMAIL</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>infy_dm__First_Name__c</fullName>
        <label>STRING</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Mailing_Address__c</fullName>
        <label>TEXTAREA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__Number__c</fullName>
        <label>NUMBER</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infy_dm__Phone__c</fullName>
        <label>PHONE</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>infy_dm__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Data Dictionary</label>
    <listViews>
        <fullName>infy_dm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>